# dotnet-dependency-graph

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: build-and-test.yaml  build.yaml
dependency_parser/: project.assets.json
dotnet_dependency_graph/: Cargo.toml
dotnet_dependency_graph/src/: algo.rs  app.rs  background.rs  dependency_panel.rs  file.rs  graph.rs  graph_widget.rs  layout_options.rs  loader.rs  main.rs  packages_panel.rs  parse.rs  parser.rs  profiling.rs  session.rs  state.rs  transform.rs  visualize.rs
dotnet_dependency_graph/src/core/: layout.rs  mod.rs  node.rs  node_cache.rs  parser.rs  session.rs  state.rs
dotnet_dependency_graph/src/graph/: graph_widget.rs  mod.rs  node_cache.rs
dotnet_dependency_graph/src/ui/: dependency_panel.rs  fps_counter.rs  graph.rs  interactions.rs  layout_options.rs  mod.rs
dotnet_dependency_graph/src/visualize/: constants.rs  draw.rs  mod.rs  zoomed.rs
dotnet_dependency_parser/: Cargo.toml
dotnet_dependency_parser/src/: lib.rs  models.rs
dotnet_dependency_parser/tests/: dependency_graph.rs  mod.rs  parsing.rs
dotnet_dependency_profiling_macros/: Cargo.toml
dotnet_dependency_profiling_macros/src/: lib.rs
nuget-dgspec-parser/: Cargo.toml
nuget-dgspec-parser/src/: models.rs
nuget-dgspec-parser/tests/: parsing.rs
nuget_dgspec_parser/: Cargo.toml
nuget_dgspec_parser/src/: assets_models.rs  graph.rs  lib.rs  models.rs
nuget_dgspec_parser/tests/: assets_parsing.rs  dependency_graph.rs  dgspec_parsing.rs  dotnet_project.rs  parsing.rs
src/: dependency.rs  main.rs
(+25 files in other folders)
