[package]
name = "dotnet_dependency_graph"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui-file-dialog = "0.12.0"
dotnet_dependency_parser = { path = "../dotnet_dependency_parser" }
regex = "1.12.2"
anyhow = "1.0"
puffin = "0.19.1"
puffin_http = { version = "0.16.1", optional = true }

[features]
default = []
puffin-server = [ "puffin_http" ]
